--- a/SmartSchoolSystem/SmartSchoolSystem/ExportHTML/Notification.html
+++ b/SmartSchoolSystem/SmartSchoolSystem/ExportHTML/Notification.html
@@ -3,44 +3,44 @@
 <head>
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<title>Reminder</title>
+<title>Notification</title>
 <style id="applicationStylesheet" type="text/css">
 	body {
 		margin: 0;
 		padding: 0;
 	}
 	:root {
-		--web-view-ids: Reminder;
+		--web-view-ids: Notification;
 	}
-	#Reminder * {
+	#Notification * {
 		margin: 0;
 		padding: 0;
 	}
-	#Reminder {
+	#Notification {
 		position: absolute;
 		box-sizing: border-box;
 		background: #E5E5E5;
-		width: 375px;
-		height: 812px;
+		width: 360px;
+		height: 640px;
 		background-color: rgba(255,255,255,1);
 		overflow: hidden;
 		margin: 0;
 		padding: 0;
 		opacity: 1;
-		--web-view-name: Reminder;
-		--web-view-id: Reminder;
+		--web-view-name: Notification;
+		--web-view-id: Notification;
 		--web-enable-deep-linking: true;
 	}
-	#Reminder_A2_RepeatGrid_2 {
+	#Reminder {
 		opacity: 1;
 		position: absolute;
-		width: 375px;
-		height: 589px;
+		width: 359px;
+		height: 460px;
 		left: 0.5px;
 		top: 72px;
 		overflow: hidden;
 	}
-	#Reminder_A2_Group_17 {
+	#Reminder_A1_Group_10 {
 		opacity: 1;
 		position: absolute;
 		width: 375px;
@@ -49,7 +49,7 @@
 		top: 0px;
 		overflow: visible;
 	}
-	#reminder_right_here {
+	#Notification_here {
 		opacity: 1;
 		position: absolute;
 		left: 60.5px;
@@ -65,19 +65,19 @@
 		font-style: normal;
 		font-weight: normal;
 		font-size: 20px;
-		color: rgba(101,105,216,1);
+		color: rgba(89,215,253,1);
 	}
-	#ID11_30 {
+	#Lorem_Ipsum_is_simply_dummy_te {
 		opacity: 1;
 		position: absolute;
-		left: 173.5px;
-		top: 92px;
+		left: 19.5px;
+		top: 28px;
 		box-sizing: border-box;
 		margin: 0;
 		padding: 0;
-		overflow: visible;
-		width: 29px;
-		white-space: nowrap;
+		overflow: hidden;
+		width: 337px;
+		height: 96px;
 		line-height: 16px;
 		margin-top: -2px;
 		text-align: center;
@@ -85,7 +85,7 @@
 		font-style: normal;
 		font-weight: normal;
 		font-size: 12px;
-		color: rgba(101,105,216,1);
+		color: rgba(89,215,253,1);
 	}
 	#divider {
 		opacity: 1;
@@ -105,16 +105,16 @@
 		width: 375px;
 		height: 1px;
 	}
-	#Reminder_A2_Group_18 {
+	#Reminder_A1_Group_11 {
 		opacity: 1;
 		position: absolute;
 		width: 375px;
 		height: 140.5px;
 		left: 0px;
-		top: 155px;
+		top: 161px;
 		overflow: visible;
 	}
-	#reminder_right_here_A2_Text_33 {
+	#Notification_here_A1_Text_18 {
 		opacity: 1;
 		position: absolute;
 		left: 60.5px;
@@ -130,19 +130,19 @@
 		font-style: normal;
 		font-weight: normal;
 		font-size: 20px;
-		color: rgba(101,105,216,1);
+		color: rgba(89,215,253,1);
 	}
-	#ID11_30_A2_Text_34 {
+	#Lorem_Ipsum_is_simply_dummy_te_A1_Text_19 {
 		opacity: 1;
 		position: absolute;
-		left: 173.5px;
-		top: 92px;
+		left: 19.5px;
+		top: 28px;
 		box-sizing: border-box;
 		margin: 0;
 		padding: 0;
-		overflow: visible;
-		width: 29px;
-		white-space: nowrap;
+		overflow: hidden;
+		width: 337px;
+		height: 96px;
 		line-height: 16px;
 		margin-top: -2px;
 		text-align: center;
@@ -150,9 +150,9 @@
 		font-style: normal;
 		font-weight: normal;
 		font-size: 12px;
-		color: rgba(101,105,216,1);
+		color: rgba(89,215,253,1);
 	}
-	#divider_A2_Line_8 {
+	#divider_A1_Line_4 {
 		opacity: 1;
 		fill: transparent;
 		stroke: rgb(240, 240, 240);
@@ -162,7 +162,7 @@
 		stroke-miterlimit: 4;
 		shape-rendering: auto;
 	}
-	.divider_A2_Line_8 {
+	.divider_A1_Line_4 {
 		overflow: visible;
 		position: absolute;
 		top: 140.5px;
@@ -170,16 +170,16 @@
 		width: 375px;
 		height: 1px;
 	}
-	#Reminder_A2_Group_19 {
+	#Reminder_A1_Group_12 {
 		opacity: 1;
 		position: absolute;
 		width: 375px;
 		height: 140.5px;
 		left: 0px;
-		top: 310px;
+		top: 322px;
 		overflow: visible;
 	}
-	#reminder_right_here_A2_Text_35 {
+	#Notification_here_A1_Text_20 {
 		opacity: 1;
 		position: absolute;
 		left: 60.5px;
@@ -195,84 +195,19 @@
 		font-style: normal;
 		font-weight: normal;
 		font-size: 20px;
-		color: rgba(101,105,216,1);
+		color: rgba(89,215,253,1);
 	}
-	#ID11_30_A2_Text_36 {
+	#Lorem_Ipsum_is_simply_dummy_te_A1_Text_21 {
 		opacity: 1;
 		position: absolute;
-		left: 173.5px;
-		top: 92px;
-		box-sizing: border-box;
-		margin: 0;
-		padding: 0;
-		overflow: visible;
-		width: 29px;
-		white-space: nowrap;
-		line-height: 16px;
-		margin-top: -2px;
-		text-align: center;
-		font-family: Gibson;
-		font-style: normal;
-		font-weight: normal;
-		font-size: 12px;
-		color: rgba(101,105,216,1);
-	}
-	#divider_A2_Line_9 {
-		opacity: 1;
-		fill: transparent;
-		stroke: rgb(240, 240, 240);
-		stroke-width: 1px;
-		stroke-linejoin: miter;
-		stroke-linecap: butt;
-		stroke-miterlimit: 4;
-		shape-rendering: auto;
-	}
-	.divider_A2_Line_9 {
-		overflow: visible;
-		position: absolute;
-		top: 140.5px;
-		left: 0px;
-		width: 375px;
-		height: 1px;
-	}
-	#Reminder_A2_Group_20 {
-		opacity: 1;
-		position: absolute;
-		width: 375px;
-		height: 140.5px;
-		left: 0px;
-		top: 465px;
-		overflow: visible;
-	}
-	#reminder_right_here_A2_Text_37 {
-		opacity: 1;
-		position: absolute;
-		left: 60.5px;
-		top: 0px;
+		left: 19.5px;
+		top: 28px;
 		box-sizing: border-box;
 		margin: 0;
 		padding: 0;
 		overflow: hidden;
-		width: 254px;
-		height: 82px;
-		text-align: center;
-		font-family: Gibson;
-		font-style: normal;
-		font-weight: normal;
-		font-size: 20px;
-		color: rgba(101,105,216,1);
-	}
-	#ID11_30_A2_Text_38 {
-		opacity: 1;
-		position: absolute;
-		left: 173.5px;
-		top: 92px;
-		box-sizing: border-box;
-		margin: 0;
-		padding: 0;
-		overflow: visible;
-		width: 29px;
-		white-space: nowrap;
+		width: 337px;
+		height: 96px;
 		line-height: 16px;
 		margin-top: -2px;
 		text-align: center;
@@ -280,9 +215,9 @@
 		font-style: normal;
 		font-weight: normal;
 		font-size: 12px;
-		color: rgba(101,105,216,1);
+		color: rgba(89,215,253,1);
 	}
-	#divider_A2_Line_10 {
+	#divider_A1_Line_5 {
 		opacity: 1;
 		fill: transparent;
 		stroke: rgb(240, 240, 240);
@@ -292,7 +227,7 @@
 		stroke-miterlimit: 4;
 		shape-rendering: auto;
 	}
-	.divider_A2_Line_10 {
+	.divider_A1_Line_5 {
 		overflow: visible;
 		position: absolute;
 		top: 140.5px;
@@ -302,44 +237,102 @@
 	}
 	#rectangle {
 		opacity: 1;
-		fill: rgba(101,105,216,1);
+		fill: rgba(89,215,253,1);
 	}
 	.rectangle {
 		transform: matrix(1,0,0,1,0,0);
 		overflow: visible;
 		position: absolute;
-		top: 661px;
+		top: 574px;
 		left: 0px;
-		width: 375px;
+		width: 359px;
 		height: 66px;
+	}
+	#button_text {
+		opacity: 1;
+		position: absolute;
+		left: 31px;
+		top: 597px;
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+		width: 299px;
+		height: 23px;
+		line-height: 24px;
+		margin-top: -4px;
+		text-align: center;
+		font-family: Gibson;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 16px;
+		color: rgba(255,255,255,1);
+	}
+	#Rectangle_5 {
+		opacity: 1;
+		fill: rgba(255,255,255,1);
+	}
+	.Rectangle_5 {
+		position: absolute;
+		overflow: visible;
+		width: 360px;
+		height: 72px;
+		left: 0px;
+		top: 0px;
+	}
+	#comments_link {
+		opacity: 1;
+		position: absolute;
+		width: 56px;
+		height: 60px;
+		left: 251px;
+		top: 12px;
+		overflow: visible;
+	}
+	#reminder {
+		opacity: 1;
+		position: absolute;
+		left: 0px;
+		top: 41px;
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
+		overflow: visible;
+		width: 57px;
+		white-space: nowrap;
+		line-height: 16px;
+		margin-top: -1px;
+		text-align: center;
+		font-family: Gibson;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 14px;
+		color: rgba(188,197,211,1);
+	}
+	#ID3_ {
+		opacity: 1;
+		position: absolute;
+		left: 20px;
+		top: 0px;
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
+		overflow: visible;
+		width: 17px;
+		white-space: nowrap;
+		text-align: center;
+		font-family: Gibson;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 30px;
+		color: rgba(188,197,211,1);
 	}
 	#followers_link {
 		opacity: 1;
 		position: absolute;
-		width: 376px;
-		height: 70px;
-		left: 0px;
-		top: 0px;
-		overflow: visible;
-	}
-	#Rectangle_7 {
-		opacity: 1;
-		fill: rgba(255,255,255,1);
-	}
-	.Rectangle_7 {
-		position: absolute;
-		overflow: visible;
-		width: 376px;
-		height: 67px;
-		left: 0px;
-		top: 0px;
-	}
-	#Group_5 {
-		opacity: 1;
-		position: absolute;
 		width: 70px;
-		height: 58px;
-		left: 51px;
+		height: 60px;
+		left: 53px;
 		top: 12px;
 		overflow: visible;
 	}
@@ -361,10 +354,10 @@
 		font-style: normal;
 		font-weight: normal;
 		font-size: 14px;
-		color: rgba(188,197,211,1);
+		color: rgba(89,215,253,1);
 	}
-	#ID4 {
-		opacity: 0.4;
+	#ID3__A1_Text_26 {
+		opacity: 1;
 		position: absolute;
 		left: 27px;
 		top: 0px;
@@ -379,82 +372,15 @@
 		font-style: normal;
 		font-weight: bold;
 		font-size: 30px;
-		color: rgba(188,197,211,1);
+		color: rgba(89,215,253,1);
 	}
-	#comments_link {
-		opacity: 1;
-		position: absolute;
-		width: 56px;
-		height: 60px;
-		left: 269px;
-		top: 12px;
-		overflow: visible;
-	}
-	#reminder {
-		opacity: 1;
-		position: absolute;
-		left: 0px;
-		top: 39px;
-		box-sizing: border-box;
-		margin: 0;
-		padding: 0;
-		overflow: visible;
-		width: 57px;
-		white-space: nowrap;
-		line-height: 16px;
-		margin-top: -1px;
-		text-align: center;
-		font-family: Gibson;
-		font-style: normal;
-		font-weight: normal;
-		font-size: 14px;
-		color: rgba(101,105,216,1);
-	}
-	#ID2_ {
-		opacity: 1;
-		position: absolute;
-		left: 20px;
-		top: 0px;
-		box-sizing: border-box;
-		margin: 0;
-		padding: 0;
-		overflow: visible;
-		width: 17px;
-		white-space: nowrap;
-		text-align: center;
-		font-family: Gibson;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 30px;
-		color: rgba(101,105,216,1);
-	}
-	#button_text {
-		opacity: 1;
-		position: absolute;
-		left: 31px;
-		top: 684px;
-		box-sizing: border-box;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-		width: 315px;
-		height: 23px;
-		line-height: 24px;
-		margin-top: -4px;
-		text-align: center;
-		font-family: Gibson;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(255,255,255,1);
-	}
-	#reviews_link {
+	#Group_5 {
 		opacity: 1;
 		position: absolute;
 		width: 106px;
 		height: 27px;
-		left: 142px;
-		top: 28px;
+		left: 130.61px;
+		top: 29px;
 		overflow: visible;
 	}
 	#main_profile {
@@ -475,110 +401,80 @@
 		font-size: 20px;
 		color: rgba(188,197,211,1);
 	}
-	#Rectangle_6 {
-		opacity: 1;
-		fill: rgba(255,255,255,1);
-	}
-	.Rectangle_6 {
-		position: absolute;
-		overflow: visible;
-		width: 376px;
-		height: 85px;
-		left: 0px;
-		top: 727px;
-	}
 </style>
 </head>
 <body>
-<div id="Reminder">
-	<div id="Reminder_A2_RepeatGrid_2">
-		<div id="Reminder_A2_Group_17">
-			<div id="reminder_right_here">
-				<span>reminder right here</span>
+<div id="Notification">
+	<div id="Reminder">
+		<div id="Reminder_A1_Group_10">
+			<div id="Notification_here">
+				<span>Notification here</span>
 			</div>
-			<div id="ID11_30">
-				<span>11:30</span>
+			<div id="Lorem_Ipsum_is_simply_dummy_te">
+				<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
 			</div>
 			<svg class="divider">
 				<path id="divider" d="M 0 0 L 375 0">
 				</path>
 			</svg>
 		</div>
-		<div id="Reminder_A2_Group_18">
-			<div id="reminder_right_here_A2_Text_33">
-				<span>reminder right here</span>
+		<div id="Reminder_A1_Group_11">
+			<div id="Notification_here_A1_Text_18">
+				<span>Notification here</span>
 			</div>
-			<div id="ID11_30_A2_Text_34">
-				<span>11:30</span>
+			<div id="Lorem_Ipsum_is_simply_dummy_te_A1_Text_19">
+				<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
 			</div>
-			<svg class="divider_A2_Line_8">
-				<path id="divider_A2_Line_8" d="M 0 0 L 375 0">
+			<svg class="divider_A1_Line_4">
+				<path id="divider_A1_Line_4" d="M 0 0 L 375 0">
 				</path>
 			</svg>
 		</div>
-		<div id="Reminder_A2_Group_19">
-			<div id="reminder_right_here_A2_Text_35">
-				<span>reminder right here</span>
+		<div id="Reminder_A1_Group_12">
+			<div id="Notification_here_A1_Text_20">
+				<span>Notification here</span>
 			</div>
-			<div id="ID11_30_A2_Text_36">
-				<span>11:30</span>
+			<div id="Lorem_Ipsum_is_simply_dummy_te_A1_Text_21">
+				<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s<br/><br/>Click to expand</span>
 			</div>
-			<svg class="divider_A2_Line_9">
-				<path id="divider_A2_Line_9" d="M 0 0 L 375 0">
-				</path>
-			</svg>
-		</div>
-		<div id="Reminder_A2_Group_20">
-			<div id="reminder_right_here_A2_Text_37">
-				<span>reminder right here</span>
-			</div>
-			<div id="ID11_30_A2_Text_38">
-				<span>11:30</span>
-			</div>
-			<svg class="divider_A2_Line_10">
-				<path id="divider_A2_Line_10" d="M 0 0 L 375 0">
+			<svg class="divider_A1_Line_5">
+				<path id="divider_A1_Line_5" d="M 0 0 L 375 0">
 				</path>
 			</svg>
 		</div>
 	</div>
-	<svg class="rectangle" viewBox="0 0 375 66">
-		<path id="rectangle" d="M 0 0 L 375 0 L 375 66 L 0 66 L 0 0 Z">
+	<svg class="rectangle" viewBox="0 0 359 66">
+		<path id="rectangle" d="M 0 0 L 359 0 L 359 66 L 0 66 L 0 0 Z">
 		</path>
 	</svg>
-	<div id="followers_link">
-		<svg class="Rectangle_7">
-			<rect id="Rectangle_7" rx="0" ry="0" x="0" y="0" width="376" height="67">
-			</rect>
-		</svg>
-		<div id="Group_5">
-			<div id="notification">
-				<span>notification</span>
-			</div>
-			<div id="ID4">
-				<span>4</span>
-			</div>
-		</div>
+	<div id="button_text">
+		<span>Notification</span>
 	</div>
+	<svg class="Rectangle_5">
+		<rect id="Rectangle_5" rx="0" ry="0" x="0" y="0" width="360" height="72">
+		</rect>
+	</svg>
 	<div id="comments_link">
 		<div id="reminder">
 			<span>reminder</span>
 		</div>
-		<div id="ID2_">
-			<span>2</span>
+		<div id="ID3_">
+			<span>3<br/></span>
 		</div>
 	</div>
-	<div id="button_text">
-		<span>Reminder</span>
+	<div id="followers_link">
+		<div id="notification">
+			<span>notification</span>
+		</div>
+		<div id="ID3__A1_Text_26">
+			<span>3<br/></span>
+		</div>
 	</div>
-	<div id="reviews_link">
+	<div id="Group_5">
 		<div id="main_profile">
 			<span>main profile</span>
 		</div>
 	</div>
-	<svg class="Rectangle_6">
-		<rect id="Rectangle_6" rx="0" ry="0" x="0" y="0" width="376" height="85">
-		</rect>
-	</svg>
 </div>
 </body>
 </html>
