Did Some inporements
The application barley works and i fixed the weird aspect ratio problem but the apk still needs to be built

--- a/SmartSchoolSystem/SmartSchoolSystem/ExportHTML/Reminder.html
+++ b/SmartSchoolSystem/SmartSchoolSystem/ExportHTML/Reminder.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<title>Reminder</title>
+<title>SmartSchoolSystem</title>
 <style id="applicationStylesheet" type="text/css">
 	body {
 		margin: 0;
@@ -22,6 +22,7 @@
 		background: #E5E5E5;
 		width: 360px;
 		height: 640px;
+		font-family: "Helvetica";
 		background-color: rgba(255,255,255,1);
 		overflow: hidden;
 		margin: 0;
@@ -61,7 +62,7 @@
 		width: 254px;
 		height: 82px;
 		text-align: center;
-		font-family: Gibson;
+		font-family: Gibson, "Helvetica";
 		font-style: normal;
 		font-weight: normal;
 		font-size: 20px;
@@ -81,7 +82,7 @@
 		line-height: 16px;
 		margin-top: -2px;
 		text-align: center;
-		font-family: Gibson;
+		font-family: Gibson, "Helvetica";
 		font-style: normal;
 		font-weight: normal;
 		font-size: 12px;
@@ -126,7 +127,7 @@
 		width: 254px;
 		height: 82px;
 		text-align: center;
-		font-family: Gibson;
+		font-family: Gibson, "Helvetica";
 		font-style: normal;
 		font-weight: normal;
 		font-size: 20px;
@@ -146,7 +147,7 @@
 		line-height: 16px;
 		margin-top: -2px;
 		text-align: center;
-		font-family: Gibson;
+		font-family: Gibson, "Helvetica";
 		font-style: normal;
 		font-weight: normal;
 		font-size: 12px;
@@ -191,7 +192,7 @@
 		width: 254px;
 		height: 82px;
 		text-align: center;
-		font-family: Gibson;
+		font-family: Gibson, "Helvetica";
 		font-style: normal;
 		font-weight: normal;
 		font-size: 20px;
@@ -211,7 +212,7 @@
 		line-height: 16px;
 		margin-top: -2px;
 		text-align: center;
-		font-family: Gibson;
+		font-family: Gibson, "Helvetica";
 		font-style: normal;
 		font-weight: normal;
 		font-size: 12px;
@@ -271,7 +272,7 @@
 		line-height: 16px;
 		margin-top: -1px;
 		text-align: center;
-		font-family: Gibson;
+		font-family: Gibson, "Helvetica";
 		font-style: normal;
 		font-weight: normal;
 		font-size: 14px;
@@ -289,7 +290,7 @@
 		width: 17px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Gibson;
+		font-family: Gibson, "Helvetica";
 		font-style: normal;
 		font-weight: bold;
 		font-size: 30px;
@@ -318,7 +319,7 @@
 		line-height: 16px;
 		margin-top: -1px;
 		text-align: center;
-		font-family: Gibson;
+		font-family: Gibson, "Helvetica";
 		font-style: normal;
 		font-weight: normal;
 		font-size: 14px;
@@ -336,7 +337,7 @@
 		width: 17px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Gibson;
+		font-family: Gibson, "Helvetica";
 		font-style: normal;
 		font-weight: bold;
 		font-size: 30px;
@@ -363,7 +364,7 @@
 		width: 107px;
 		white-space: nowrap;
 		text-align: center;
-		font-family: Gibson;
+		font-family: Gibson, "Helvetica";
 		font-style: normal;
 		font-weight: normal;
 		font-size: 20px;
@@ -383,7 +384,7 @@
 		line-height: 24px;
 		margin-top: -4px;
 		text-align: center;
-		font-family: Gibson;
+		font-family: Gibson, "Helvetica";
 		font-style: normal;
 		font-weight: bold;
 		font-size: 16px;
