--- a/SmartSchoolSystem/SmartSchoolSystem/SmartSchoolSystem/www/Notification.html
+++ b/SmartSchoolSystem/SmartSchoolSystem/SmartSchoolSystem/www/Notification.html
@@ -522,6 +522,6 @@
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="scripts/platformOverrides.js"></script>
-    <script type="text/javascript" src="scripts/index.js"></script>
+    <script type="text/javascript" src="scripts/notification.js"></script>
 </body>
 </html>
