--- a/SmartSchoolSystem/SmartSchoolSystem/SmartSchoolSystem/www/Reminder.html
+++ b/SmartSchoolSystem/SmartSchoolSystem/SmartSchoolSystem/www/Reminder.html
@@ -504,6 +504,6 @@
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="scripts/platformOverrides.js"></script>
-    <script type="text/javascript" src="scripts/index.js"></script>
+    <script type="text/javascript" src="scripts/reminder.js"></script>
 </body>
 </html>
